# YUGIOHTournament

./: .gitignore  README  codex.md  docker-compose.yml
backend/: .env.example  backend.spec  requirements.txt  run_backend.py
backend/app/: database.py  kts_watcher.py  local_settings.py  main.py  models.py  player_profiles.py  public_publishing_client.py  public_snapshots.py  publishing.py  schemas.py
backend/app/routes/: auto_sync.py  matches.py  player_profiles.py  players.py  public.py  rounds.py  settings.py  tournaments.py
backend/tests/: test_bye_import.py  test_community_stats_inclusion.py  test_playoffs.py  test_tournament_backup.py
frontend/: .env.desktop.example  .env.example  .env.public.example  HOSTED_PUBLIC_PAGE.md  components.json  index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: build-backend.cjs
frontend/src/: App.jsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src/api/: client.js
frontend/src/apps/: DesktopApp.jsx  PublicApp.jsx
frontend/src/components/: KtsLauncher.jsx  PublicTournamentView.jsx
frontend/src/lib/: publicTournamentData.js
frontend/src/pages/: AdminPage.jsx  AdminTournamentPage.jsx  HostedPublicLandingPage.jsx  HostedPublicTournamentPage.jsx  PlayerProfilesPage.jsx  PublicTournamentPage.jsx  PublishingSettingsPage.jsx
public-service/: README.md  package-lock.json  package.json  wrangler.toml
public-service/examples/: public-snapshot.json
public-service/src/: index.js
(+8 files in other folders)
