[package]
name = "yugioh-tournament-manager"
version = "0.1.0"
description = "Yu-Gi-Oh Tournament Manager"
authors = ["Yu-Gi-Oh Tournament Manager"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
